--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  color: ;
+  color: #434455;
   background-color: #fff;
 }
 a {
@@ -18,11 +18,12 @@ ul {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -30,11 +31,24 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: #2e2f42;
 }
+
 .header-navigation-list {
 }
 .header-navigation-item {
+}
+.header-studio-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.header-studio-link:hover,
+.header-studio-link:focus,
+.header-studio-link:active {
+  color: #404bbf;
 }
 .header-navigation-link {
   font-weight: 500;
@@ -42,6 +56,10 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.header-navigation-link:hover,
+.header-navigation-link:focus {
+  color: #404bbf;
 }
 .header-address {
 }
@@ -57,6 +75,10 @@ ul {
   color: #434455;
   text-decoration: none;
 }
+.header-address-link:hover,
+.header-address-link:focus {
+  color: #404bbf;
+}
 .section {
   background-color: #2e2f42;
 }
@@ -69,16 +91,26 @@ ul {
   color: #fff;
 }
 .main-button {
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  background: #4d5ae5;
+  cursor: pointer;
 }
 .features {
 }
-.visualy-hidden {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 .features-list {
 }
@@ -112,15 +144,20 @@ ul {
 .team-list {
 }
 .team-list-item {
+  background-color: #fff;
+}
+.team-list-item:hover {
+  background-color: #fff;
 }
 .team-image {
 }
+
 .team-item-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
+
   color: #2e2f42;
 }
 .team-item-position {
@@ -128,7 +165,6 @@ ul {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #434455;
 }
 .portfolio {
@@ -144,6 +180,7 @@ ul {
 .portfolio-list {
 }
 .portfolio-list-item {
+  background-color: #fff;
 }
 .portfolio-item-image {
 }
@@ -175,7 +212,16 @@ ul {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.17;
+  line-height: 1.16667;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.16667;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
