--- a/css/styles.css
+++ b/css/styles.css
@@ -38,18 +38,7 @@ ul {
 }
 .header-navigation-item {
 }
-.header-studio-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-.header-studio-link:hover,
-.header-studio-link:focus,
-.header-studio-link:active {
-  color: #404bbf;
-}
+
 .header-navigation-link {
   font-weight: 500;
   font-size: 16px;
@@ -74,6 +63,7 @@ ul {
   letter-spacing: 0.02em;
   color: #434455;
   text-decoration: none;
+  font-style: normal;
 }
 .header-address-link:hover,
 .header-address-link:focus {
@@ -87,7 +77,6 @@ ul {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #fff;
 }
 .main-button {
@@ -97,8 +86,12 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  background: #4d5ae5;
+  background: #404bbf;
   cursor: pointer;
+}
+.main-button:hover,
+.main-button:focus {
+  background: #404bbf;
 }
 .features {
 }
@@ -138,8 +131,8 @@ ul {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .team-list {
 }
@@ -174,8 +167,8 @@ ul {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .portfolio-list {
 }
@@ -221,7 +214,7 @@ ul {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
